crates/rustyray-macros/tests/ui/fail/actor_with_generics.rs
use rustyray::prelude::*;

// Actor with generics - should fail
#[rustyray::actor]
struct GenericActor<T> {
    value: T,
}

fn main() {}